Bug 266282 - Accepting a counter proposal leads to a crash
Summary: Accepting a counter proposal leads to a crash
Status: VERIFIED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Windows CE Microsoft Windows CE
: NOR major
Target Milestone: ---
Assignee: Ludwig Reiter
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-14 10:40 UTC by Bjoern Ricks
Modified: 2011-02-21 15:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bjoern Ricks 2011-02-14 10:40:43 UTC
kmail-mobile is crashing if a user accepts a counter proposal from another attendee.

Steps to reproduce:
1) Open korg-mobile
2) crate a new event with another attendee
3) send invitation mail to the other attendee
4) second attendee creates a counter proposal
5) open kmail-mobile
6) receive counter proposal mail and open it
7) click on accept

kmail-mobile crashes on wince and maemo. therefore it isn't a issue of not enough memory on wince.
Comment 1 Tobias Koenig 2011-02-14 16:54:19 UTC
Git commit 773c5bc8c80985bd863b56997452185355c2a9fc by Tobias Koenig.
Committed on 14/02/2011 at 16:57.
Pushed by tokoe into branch 'komo3'.

Do not crash when accepting a counter proposal

In case of accepting a counter proposal we use a NepomukCalendar,
so we have to use this one instead of the mCalendar.

BUG: 266282

M  +3    -2    calendarsupport/mailscheduler.cpp     

http://commits.kde.org/kdepim/773c5bc8c80985bd863b56997452185355c2a9fc
Comment 2 Andre Heinecke 2011-02-15 17:44:18 UTC
Please verify that this is fixed
Comment 3 Ludwig Reiter 2011-02-21 15:46:38 UTC
Kontact Touch Windows CE 20110218 22:55

Doesn't crash any more. 
Verified