Do not crash when accepting a counter proposal

In case of accepting a counter proposal we use a NepomukCalendar,
so we have to use this one instead of the mCalendar.

BUG: 266282